Remove `:not(:root)` from the workaround for SVG overflow bug
* `svg:not(:root)` specificity is very high (https://github.com/necolas/normalize.css/issues/718)
* Bootstrap do not support SVG documents (See #26878)

--- a/scss/_reboot.scss
+++ b/scss/_reboot.scss
@@ -274,12 +274,9 @@ img {
 
 svg {
   vertical-align: middle;
-
-  &:not(:root) {
-    // Workaround for the SVG overflow bug in IE10/11 is still required.
-    // See https://github.com/twbs/bootstrap/issues/26878
-    overflow: hidden;
-  }
+  // Workaround for the SVG overflow bug in IE10/11 is still required.
+  // See https://github.com/twbs/bootstrap/issues/26878
+  overflow: hidden;
 }
 
 
